--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "TwitterReact",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --open"
+    "webpack-dev-client": "webpack-dev-server --open",
+    "build-client": "set NODE_ENV=production && webpack -p"
   },
   "repository": {
     "type": "git",
@@ -19,9 +20,12 @@
   "dependencies": {
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
-    "react-router-dom": "^4.2.2"
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.2.2",
+    "redux": "^4.0.0"
   },
   "devDependencies": {
+    "axios": "^0.18.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
